[package]
name = "crucible-lua"
version = "0.1.0"
edition = "2021"
description = "Lua 5.4 scripting runtime for Crucible with Fennel support"
license = "MIT"
authors = ["Crucible Contributors"]

[features]
default = ["fennel"]
# Fennel compiles Lisp to Lua - macros, pattern matching, clean syntax
fennel = ["mlua/lua54"]
send = ["mlua/send"]  # Enable Send+Sync for multi-threaded use

[dependencies]
# Runtime: Lua 5.4 with optional Fennel compiler
mlua = { version = "0.11", features = ["vendored", "async", "serialize", "lua54"] }

# Static analysis: Parse Lua for documentation extraction
full_moon = { version = "2", features = ["lua52"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1", features = ["fs", "rt", "process", "time"] }
regex = "1"
glob = "0.3"
walkdir = "2"

# Shared types with core
crucible-core = { path = "../crucible-core" }

# Oil TUI framework for Lua UI building
crucible-oil = { path = "../crucible-oil" }

# XDG config directories
dirs = "6"

# UUID for interaction batch IDs
uuid = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
base64 = { workspace = true }

# TOON query for multi-format support
oq = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
proptest = "1"
