[package]
name = "crucible-mcp"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
crucible-core = { path = "../crucible-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# MCP Protocol - using available version
mcp = "0.1"

# Database
duckdb = { version = "1.1", features = ["bundled", "vtab", "json", "parquet"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Vector operations
ndarray = "0.15"

# Serialization
bincode = "1.3"

# Regex for pattern matching
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
tempfile = "3.8"

