[package]
name = "crucible-mcp"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "crucible-mcp-server"
path = "src/main.rs"

[[example]]
name = "mcp_client_demo"
path = "examples/mcp_client_demo.rs"

[dependencies]
crucible-core = { path = "../crucible-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# JSON-RPC for MCP protocol
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"

# Database
duckdb = { version = "1.1", features = ["bundled", "vtab", "json", "parquet"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Vector operations
ndarray = "0.15"

# Serialization
bincode = "1.3"

# Regex for pattern matching
regex = "1.10"

# HTTP client for Obsidian API integration
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
tempfile = "3.8"
tracing-subscriber = "0.3"

