[package]
name = "crucible-mcp"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "crucible-mcp-server"
path = "src/main.rs"

[[example]]
name = "mcp_client_demo"
path = "examples/mcp_client_demo.rs"

[dependencies]
crucible-core = { path = "../crucible-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# JSON-RPC for MCP protocol
# NOTE: These will be removed in Phase 5 of rmcp migration
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"

# Official MCP SDK (rmcp)
# Using server and transport-io features for stdio-based MCP server
rmcp = { version = "0.8.1", features = ["server", "transport-io"] }
schemars = "1.0"

# Database
duckdb = { version = "1.1", features = ["bundled", "vtab", "json", "parquet"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Vector operations
ndarray = "0.16"

# Serialization
bincode = "2.0"

# Regex for pattern matching
regex = "1.12"

# File globbing for vault indexing
glob = "0.3"

# HTTP client for Obsidian API integration
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
urlencoding = "2.1"

# Rune scripting support
rune = "0.13"
rune-modules = "0.13"

# File watching for hot reload
notify = "8.0"

# JSON Schema validation
jsonschema = "0.33"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
tempfile = "3.8"
tracing-subscriber = "0.3"

