[package]
name = "crucible-merkle"
version = "0.1.0"
edition = "2021"

[dependencies]
# Parser types (ParsedNote, BlockHash, etc.) - now from crucible-core (Dependency Inversion)
crucible-core = { path = "../crucible-core" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Encoding
hex = "0.4"

# Async
tokio = { version = "1.42", features = ["sync"] }
async-trait = "0.1"

# Thread safety
parking_lot = "0.12"

# Hashing
blake3 = "1.5"

# Error handling
thiserror = "2.0"

[dev-dependencies]
# Testing utilities
tokio = { version = "1.42", features = ["full"] }
# Parser implementation for tests (not needed for library code)
crucible-parser = { path = "../crucible-parser" }
