[package]
name = "crucible-mock-agent"
version = "0.1.0"
edition = "2021"
authors = ["Crucible Contributors"]
description = "Mock ACP agent for testing and as a foundation for building Crucible agents"
license = "MIT OR Apache-2.0"

[dependencies]
agent-client-protocol = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["io-std", "rt", "macros"] }
tracing = "0.1"

[[bin]]
name = "crucible-mock-agent"
path = "src/bin/crucible-mock-agent.rs"
