[package]
name = "crucible-observe"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Session logging and observability for Crucible"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time handling
chrono = { workspace = true }

# Hashing for session IDs
blake3 = "1.7"

# Random number generation
rand = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["fs", "io-util"] }

# Optional SQLite storage
rusqlite = { version = "0.37", features = ["bundled"], optional = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }

[features]
default = []
sqlite = ["dep:rusqlite"]
