[package]
name = "crucible-oil"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Minimal Elm/Dioxus-inspired TUI framework for terminal applications"

[features]
default = []
test-utils = ["dep:proptest"]

[dependencies]
crossterm = { workspace = true }
unicode-width = "0.2"
taffy = "0.9"
textwrap = "0.16.2"
similar = "2.7"
html_parser = "0.7"
proptest = { version = "1.4", optional = true }

[dev-dependencies]
insta = { version = "1.46", features = ["filters"] }
test-case = "3.3"
proptest = "1.4"
