[package]
name = "crucible-oil"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Minimal Elm/Dioxus-inspired TUI framework for terminal applications"

[features]
default = []
test-utils = ["dep:proptest"]

[dependencies]
crossterm = { workspace = true }
unicode-width = "0.2"
taffy = "0.10"
textwrap = "0.16.2"
similar = "3.0"
html_parser = "0.7"
proptest = { version = "1.11", optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { version = "1.47", features = ["filters"] }
test-case = "3.3"
proptest = "1.11"
