[package]
name = "crucible-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dependency Inversion: Parser depends on core for trait and type definitions
crucible-core = { path = "../crucible-core" }

# Async runtime
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Regular expressions
regex = { workspace = true }

# Time handling
chrono = { workspace = true, features = ["serde"] }

# Parsing
markdown-it = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Hashing
blake3 = "1.8"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
criterion = { workspace = true, features = ["async_tokio"] }
proptest = { workspace = true }

[[bench]]
name = "parser_comparison"
harness = false

[[bench]]
name = "poc_wikilink_benchmark"
harness = false

[[bench]]
name = "fair_comparison"
harness = false

[features]
default = ["markdown-it-parser"]
full-featured = []
markdown-it-parser = []

[lib]
name = "crucible_parser"
path = "src/lib.rs"
