[package]
name = "crucible-pipeline"
version = "0.1.0"
edition = "2021"

[features]
# Optional markdown-it parser support (propagated from crucible-parser)
markdown-it-parser = ["crucible-parser/markdown-it-parser"]

[dependencies]
# Core types and traits
crucible-core = { path = "../crucible-core" }
crucible-parser = { path = "../crucible-parser" }
crucible-merkle = { path = "../crucible-merkle" }
crucible-enrichment = { path = "../crucible-enrichment" }

# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = { workspace = true }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"

# Hashing
blake3 = "1.5"

[dev-dependencies]
# Testing
tempfile = "3.14"
chrono = "0.4"
