[package]
name = "crucible-pipeline"
version = "0.1.0"
edition = "2021"

[features]
# Optional markdown-it parser support (propagated from crucible-parser)
markdown-it-parser = ["crucible-parser/markdown-it-parser"]

# Test tier flags (see justfile for usage)
test-fixtures = []       # Tests using docs/ kiln or examples/test-kiln
test-infrastructure = [] # Tests requiring Ollama, embedding endpoints
test-slow = []           # Performance benchmarks and timing tests

[dependencies]
# Core types and traits
crucible-core = { path = "../crucible-core" }
crucible-parser = { path = "../crucible-parser" }

# Async runtime
tokio = { version = "1.49", features = ["full"] }
async-trait = { workspace = true }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"

# Hashing
blake3 = "1.8"

# Time and serialization (for NoteRecord)
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"

[dev-dependencies]
# Testing
tempfile = "3.25"
