[package]
name = "crucible-pipeline"
version = "0.1.0"
edition = "2021"

[features]
# Test tier flags (see justfile for usage)
test-fixtures = []       # Tests using docs/ kiln or examples/test-kiln
test-infrastructure = [] # Tests requiring Ollama, embedding endpoints
test-slow = []           # Performance benchmarks and timing tests

[dependencies]
# Thin re-export shim — types have moved to crucible-daemon::pipeline
crucible-daemon = { path = "../crucible-daemon", default-features = false }
