[package]
name = "crucible-plugins"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
crucible-core = { path = "../crucible-core" }
rune = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

